[gd_scene load_steps=6 format=3 uid="uid://bfnp7rmmphi6i"]

[ext_resource type="Script" path="res://scenes/ufo.gd" id="1_e3nll"]
[ext_resource type="Texture2D" uid="uid://5s1qaxknbe1f" path="res://assets/Ufo/Ufo.png" id="1_jea8i"]
[ext_resource type="Script" path="res://scenes/UfoShooting.gd" id="3_1rps3"]
[ext_resource type="Script" path="res://scenes/SpawnTimer.gd" id="3_32ucw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2020"]
size = Vector2(16, 7)

[node name="Ufo" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 64
collision_mask = 2
script = ExtResource("1_e3nll")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_jea8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w2020")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="UfoShooting" type="Node2D" parent="."]
script = ExtResource("3_1rps3")

[node name="SpawnTimer" type="Timer" parent="UfoShooting" groups=["Ufo"]]
script = ExtResource("3_32ucw")
min_timer = 0.25
max_timer = 1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="UfoShooting/SpawnTimer" to="UfoShooting" method="_on_spawn_timer_timeout"]
